github-runner-gcp-automation-dind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner-gcp-automation-dind
  labels:
    app: github-runner-gcp-automation-dind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-runner-gcp-automation-dind
  template:
    metadata:
      labels:
        app: github-runner-gcp-automation-dind
    spec:
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      containers:
      - name: github-runner-gcp-automation
        image: calmmopey/github-runner-ubuntu:arm64
        tty: true
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock
