github-runner-gcp-automation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner-gcp-automation
  labels:
    app: github-runner-gcp-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-runner-gcp-automation
  template:
    metadata:
      labels:
        app: github-runner-gcp-automation
    spec:
      containers:
      - name: github-runner-gcp-automation
        image: calmmopey/github-runner-worker:arm64
        tty: true
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock
        securityContext:
          privileged: true
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
