pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  labels:
    app: secret
spec:
  containers:
  - name: secret-container
    image: calmmopey/worker-arm-buster
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
    volumeMounts:
    - name: config-data
      mountPath: /data
    - name: jenkins-serviceaccount
      mountPath: "/jenkins" 
      readOnly: true
  volumes:
  - name: config-data
    emptyDir: {}
  - name: jenkins-serviceaccount
    secret:
      secretName: jenkins-serviceaccount
