jenkins-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: jenkins
