jenkins-slaves.yaml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-discovery
    namespace: jenkins
  spec:
    selector:
      app: jenkins
    ports:
      - protocol: TCP
        port: 50000
        targetPort: 50000
        name: slaves
