jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: cockerilla.plus.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
