jenkins-nginx-ingress-gke-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - thenun.crabdance.com
    secretName: jenkins-tls
  rules:
  - host: thenun.crabdance.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: jenkins
          port:
           number: 8080
