jenkins-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: cockerilla.plus.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
