prometheus-nginx-ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - prom.uk.to
    secretName: prom-tls
  rules:
  - host: prom.uk.to
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: kube-prometheus-stack-1668-prometheus
          port:
           number: 9090
